--- a/lookup/templates/base.html
+++ b/lookup/templates/base.html
@@ -3,7 +3,17 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Weather App</title>
+
+    <style>
+        .good {background-color: #0C0;}
+        .moderate {background-color: #FFFF00;}
+        .usg {background-color: #FF9900;}
+        .unhealthy {background-color: #FF0000;}
+        .veryunhealthy {background-color: #990066;}
+        .hazardous {background-color: #660000;}
+    </style>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
   </head>
   <body>
